Fixed up picking columns to add the full table name when needed.